--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^11.0.2",
+        "date-fns": "^2.30.0",
         "sweetalert2": "^11.21.0",
         "swiper": "^11.2.6",
+        "v-calendar": "^3.1.2",
         "vue-easy-lightbox": "^1.19.0",
-        "vue-toastification": "^2.0.0-rc.5",
-        "vue3-datepicker": "^0.4.0"
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
