ajout d'affichage des messages en temps réel sans refresh

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@vuepic/vue-datepicker": "^11.0.2",
         "date-fns": "^2.30.0",
+        "dayjs": "^1.11.13",
         "sweetalert2": "^11.21.0",
         "swiper": "^11.2.6",
         "v-calendar": "^3.1.2",
