--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "d3": "^7.9.0",
         "date-fns": "^2.30.0",
         "dayjs": "^1.11.13",
+        "html2canvas": "^1.4.1",
         "remixicon": "^4.6.0",
         "sweetalert2": "^11.21.0",
         "swiper": "^11.2.6",
