--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Install Composer dependencies
       run: composer install --no-progress --prefer-dist
 
-    - name: Copy .env and generate key
-      run: cp .env.example .env && php artisan key:generate
+    - name: Copy CI .env and generate key
+      run: cp .env.ci .env && php artisan key:generate
 
     - name: Run migrations
       run: php artisan migrate --force
