--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,31 @@
+version: '3.8'
 
 services:
   app:
     build:
       context: .
-      dockerfile: docker/php/Dockerfile
-    container_name: laravel_app
+      dockerfile: Dockerfile
+    container_name: Globber
+    ports:
+      - "8000:9000"
     volumes:
-      - .:/var/www/html
+      - .:/var/www
+    env_file:
+      - .env.docker
     depends_on:
-      - mysql
-    working_dir: /var/www/html
-    networks:
-      - laravel
+      - db
 
-  mysql:
-    image: mysql:8
-    container_name: laravel_db
+  db:
+    image: mysql:8.0
+    container_name: appairbnbpro-db
     restart: always
+    environment:
+      MYSQL_DATABASE: appairbnbpro
+      MYSQL_ROOT_PASSWORD: root
     ports:
       - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: laravel
     volumes:
       - dbdata:/var/lib/mysql
-    networks:
-      - laravel
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    restart: always
-    ports:
-      - "8080:80"
-    environment:
-      PMA_HOST: mysql
-    depends_on:
-      - mysql
-    networks:
-      - laravel
-
-  nginx:
-    image: nginx:alpine
-    container_name: laravel_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - .:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - app
-    networks:
-      - laravel
-
-networks:
-  laravel:
 
 volumes:
   dbdata:
