--- a/.env.docker
+++ b/.env.docker
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+VITE_DEV_SERVER_URL=http://localhost:5173
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
