--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -16,8 +16,8 @@ server {
 
     # Passage des .php à PHP-FPM directement sur app:9000
     location ~ \.php$ {
-        # ici on n’utilise PAS upstream, on cible directement host:port
-        fastcgi_pass app:9000;
+        # ici on n'utilise PAS upstream, on cible directement host:port
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
 
         include fastcgi_params;
@@ -27,7 +27,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    # Sécurité : interdire l’accès aux fichiers .ht*
+    # Sécurité : interdire l'accès aux fichiers .ht*
     location ~ /\.ht {
         deny all;
     }
