adding nginx for deployement

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,3 @@
-# Permet à Nginx de résoudre les noms de services Docker
-resolver 127.0.0.11 valid=30s ipv6=off;
-
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -14,21 +11,22 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Passage des .php à PHP-FPM directement sur app:9000
+    # Passage des .php à PHP-FPM en local (même container)
     location ~ \.php$ {
-        # ici on n'utilise PAS upstream, on cible directement host:port
-        fastcgi_pass php:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-
         include fastcgi_params;
-        # Assurez-vous que fastcgi_params contient bien :
-        # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # sinon ajoutez-le ci-dessous :
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     # Sécurité : interdire l'accès aux fichiers .ht*
     location ~ /\.ht {
         deny all;
+    }
+
+    # Assets statiques
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
