--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,33 +1,38 @@
-
 server {
-    listen ${PORT:-80} default_server;
-    listen [::]:${PORT:-80} default_server;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name _;
 
     root /var/www/html/public;
     index index.php index.html;
 
-    # Toutes les requêtes passent par index.php
+    # Route principale Laravel
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Passage des .php à PHP-FPM en local (même container)
+    # PHP-FPM
     location ~ \.php$ {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    # Sécurité : interdire l'accès aux fichiers .ht*
-    location ~ /\.ht {
-        deny all;
+        
+        # Timeouts pour éviter les 502
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_connect_timeout 300;
     }
 
     # Assets statiques
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Sécurité
+    location ~ /\.ht {
+        deny all;
     }
 }
