--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,33 +6,67 @@ server {
     root /var/www/html/public;
     index index.php index.html;
 
+    # Logs pour le debugging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Configuration client
+    client_max_body_size 100M;
+    client_body_timeout 60s;
+    client_header_timeout 60s;
+
     # Route principale Laravel
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # PHP-FPM
+    # PHP-FPM avec configuration optimisée
     location ~ \.php$ {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         
         # Timeouts pour éviter les 502
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        fastcgi_connect_timeout 300;
+        fastcgi_read_timeout 300s;
+        fastcgi_send_timeout 300s;
+        fastcgi_connect_timeout 60s;
+        
+        # Buffer settings
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
     }
 
     # Assets statiques
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         try_files $uri =404;
     }
 
+    # Gestion des erreurs
+    error_page 404 /index.php;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
     # Sécurité
     location ~ /\.ht {
         deny all;
+    }
+    
+    location ~ /\.env {
+        deny all;
+    }
+
+    # Health check pour Railway
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 }
