docker images bugged

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -20,9 +20,17 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Sert les fichiers du lien symbolique "public/storage"
+    #   location ^~ /storage/ {
+    #     alias /var/www/html/storage/app/public/;
+    #     access_log off;
+    #     expires 1h;
+    #     try_files $uri =404;
+    # }
+
     # PHP-FPM avec configuration optimisée
     location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass Globber_php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
