--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - .:/var/www/html
       - ./vendor:/var/www/html/vendor
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./storage/app/public:/var/www/html/public/storage
     depends_on:
       - php
     networks:
